504_from_envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 10002
static_resources:
  listeners:
  - name: client_proxy
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http_self
          common_http_protocol_options:
            idle_timeout: 0.3s
          route_config:
            name: local_route_in
            virtual_hosts:
            - name: self_other
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  timeout: 2s
                  host_rewrite: www.google.com
                  cluster: target_proxy_cluster
          http_filters:
          - name: envoy.router
  - name: target_proxy
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          common_http_protocol_options:
            idle_timeout: 0.5s
          route_config:
            name: local_route_out
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: www.google.com
                  cluster: target_service
          http_filters:
          - name: http.fault
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.fault.v2.HTTPFault
              delay:
                fixed_delay: 5s
                percentage:
                  numerator: 100
                  denominator: "HUNDRED"
              upstream_cluster: target_service
          - name: envoy.router
  clusters:
  - name: target_proxy_cluster
    connect_timeout: 0.25s
    # common_http_protocol_options:
    #   idle_timeout: 0.3s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: target_proxy_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 10001
  - name: target_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: target_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
        sni: www.google.com
